<resources>
    <string name="app_name">AntPlay Registration</string>
    <string name="register"><u>Registration</u></string>
    <string name="submit">Submit</string>
    <string name="name">First Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="favorite_flavor">Favorite\nFlavor</string>
    <string name="terms_of_use">By ticking, you\'re confirming that your picture clicked in the photo booth can be used for promotion and update by Antplay</string>
    <string name="register_new">Register New</string>
    <string name="enter_first_name">Please provide your first name</string>
    <string name="enter_last_name">Please provide your last name</string>
    <string name="enter_mobile">Please provide mobile number</string>
    <string name="enter_correct_mobile">Please provide a valid mobile number</string>
    <string name="enter_correct_email">Please provide a valid email</string>
    <string name="select_flavour">Please select flavour</string>
    <string name="enter_age">Please provide your age</string>
    <string name="enter_state">Please provide the name of state you lives in</string>
    <string name="check_term_of_use">Please check terms of use</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="state">State</string>
    <string name="demo_string">Do you want to opt for the 2-Hour Demo</string>
    <string name="reference_text">How did you hear about Ant Play?</string>
    <string name="feedback_text">How was your Experience at Comicon and at our Booth</string>
    <string name="feedback_text_ex">your Experience</string>
    <string name="valid_mobile_number">Valid Mobile Number</string>
    <string name="valid_email">Valid Email</string>
    <string name="your_age_in_years">your age in years</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="not_received_otp">Didn’t receive the code?</string>
    <string name="resend_otp"> Resend</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="suggestion">Suggestion</string>
    <string name="suggestion_here">Provide your suggestions here...</string>
    <string name="thank_you">Thank you</string>
    <string name="thanks_message">Thank you for visiting Ant Play, We will get in touch with you soon for the Demo. You can now claim your complimentary Ant Play Merchandise at our booth.</string>
</resources>