<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    tools:context=".activities.ThanksActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/diacord_qrcode" />

    <TextView
        android:id="@+id/txtThankYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/thank_you"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtThankYouMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtThankYou"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/thanks_message"
        android:textColor="@color/white"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/txtRegisterAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtThankYouMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_button"
        android:elevation="10dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/register_new"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>