<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlParent"
    android:background="@color/blackTransparent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/blue">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/yellow" />

        <RelativeLayout
            android:id="@+id/rlOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/txtHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="5dp"
                android:text="@string/otp_verify"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/llOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtHello"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <EditText
                    android:id="@+id/editTextOne"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/blue_trans"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:nextFocusRight="@+id/editTexttwo"
                    android:textAlignment="center"
                    android:textColor="@color/white">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/editTextTwo"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/blue_trans"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:nextFocusRight="@+id/editTextthree"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editTextThree"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/blue_trans"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:nextFocusRight="@+id/editTextfour"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editTextFour"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/blue_trans"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:nextFocusRight="@+id/editTextfour"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

              <!--  <EditText
                    android:id="@+id/editTextfive"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:nextFocusRight="@+id/editTextfour"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/editTextsix"
                    android:layout_width="40dp"
                    android:layout_height="42dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
-->
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlResendOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlOTP"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/txtNotReceiveOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"

                android:paddingTop="10dp"
                android:paddingEnd="2dp"
                android:paddingBottom="10dp"
                android:text="@string/not_received_otp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txtResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/txtNotReceiveOTP"

                android:paddingTop="10dp"
                android:paddingEnd="2dp"
                android:paddingBottom="10dp"
                android:text="@string/resend_otp"
                android:textColor="@color/purple_200"
                android:textSize="12sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rlResendOTP"
            android:layout_marginTop="30dp"
            android:weightSum="2">


            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_dialog_button"
                android:gravity="center"
                android:text="cancel"
                android:layout_marginEnd="1dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnProceed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="1dp"
                android:background="@drawable/bg_dialog_button"
                android:gravity="center"
                android:text="proceed"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>